# qlever

./: .dockerignore  .gitignore  BINARY-BUILD.md  CMakeLists.txt  Dockerfile  Dockerfile.test-only  README.md  README_examples.md  WASM_BUILD_NOTES.md  WASM_IMPLEMENTATION.md  bug-report-prefix-crash.md  build-wasm-real.sh  clean_docsfile.py  code_review.md  debug_args.sh  docker-compose.cli-alpine.yml  qlever-docker.sh  test-wasm.sh  test_size.cpp  validate_text_index.py
Dockerfiles/: Dockerfile.Ubuntu20.04  Dockerfile.Ubuntu22.04  Dockerfile.cli-only  Dockerfile.cli-only.alpine  Dockerfile.cli-only.ubuntu  Dockerfile.cli-test  Dockerfile.cli-test-image  Dockerfile.cli-test-runner  Dockerfile.debian  Dockerfile.wasm.alpine  Dockerfile.wasm.build  Dockerfile.wasm.demo  Dockerfile.wasm.emscripten  Dockerfile.wasm.enhanced  Dockerfile.wasm.real
databases/: .gitignore
docs/: quickstart.md  troubleshooting.md
e2e-cli/: .gitignore  build-index-stdin.spec.ts  extended-commands.spec.ts  full-run-quads-no-binary.spec.ts  full-run-quads.spec.ts  full-run-triples-no-binary.spec.ts  full-run-triples.spec.ts  package-lock.json  package.json  performance.spec.ts  rdf-star-error.spec.ts  test-utils.ts
e2e-cli/test-db-extended/: build-config.json  construct-result.nt  initial.nt  test-index.index.ops  test-index.index.osp  test-index.index.patterns  test-index.index.pos  test-index.index.pso  test-index.index.sop  test-index.index.spo  test-index.internal.index.pos  test-index.internal.index.pso  test-index.meta-data.json  test-index.vocabulary.codebooks  test-index.vocabulary.words.external  test-index.vocabulary.words.external.offsets  test-index.vocabulary.words.internal  test-index.vocabulary.words.internal.ids
e2e-cli/test-db-quads/: build-config.json
e2e-cli/test-db-quads-no-binary/: build-config.json  initial.nq
e2e-cli/test-db-triples-no-binary/: build-config.json  initial.nt
examples/wasm/: README.md  index.html  (+2 more)
misc/: schema.ttl  settings.json  test-extended.nq  test-literals.nq  test-simple.nq  test.nq
src/: Cli-obsolete.cpp  QleverCliContext.h  QleverCliMain.cpp
src/cli-utils/: CMakeLists.txt  CliArgs.cpp  CliArgs.h  IndexBuilderUtils.cpp  IndexBuilderUtils.h  IndexStatsUtils.cpp  IndexStatsUtils.h  QueryTypeDetect.h  QueryUtils.cpp  QueryUtils.h  RdfOutputUtils.cpp  RdfOutputUtils.h  StreamSuppressor.cpp  StreamSuppressor.h
src/qlever-wasm/: CMakeLists.enhanced.txt  CMakeLists.txt  QleverWasm.cpp  QleverWasm.h  QleverWasmDemo.cpp  QleverWasmEnhanced.cpp  QleverWasmReal.cpp  README.md
test/: CMakeLists.txt  CliUtilsRdfTest.cpp  CliUtilsTest.cpp
wasm-build/: index.html  qlever-wasm-enhanced.wasm  qlever-wasm.js  qlever-wasm.wasm
(+64 files in other folders)
